dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=tuttycoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=tuttycoin-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=tuttycoin-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=tuttycoin-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=tuttycoin-wallet.1
endif
endif
